4.1.2
-----
1. Fix grid menu button hover highlight.
2. Fix showing extra artists in album style queue.
3. For LMS8.4+ no need to poll for updates, LMS now signals this in its status
   message.

4.1.1
-----
 1. Highlight and scroll timed lyrics by default.
 2. If swiping up in desktop layout ignore if in bottom 100px.
 3. Fix text alignment in grid headers.
 4. Fix hover button positions in lists.
 5. Fix clicking on BBC Sounds emblem for live streams.
 6. Show search icon on search fields even for non-touch devices.
 7. Only apply larger left indent and right indent if queue is not pinned.
 8. Increase min-widths required for track list indentation.
 9. Add 'Play shuffled' to context menus.
10. Add 'Play shuffled' to section headers.
11. Fix 'Play shuffled' for multi-disc albums.
12. Fix total track count for multi-disc albums.
13. Copy accent colour, etc. into 'Server settings' iframe.
14. Add sort action to 'All songs' when navigate from 'Years' or 'Genres'.
15. Fix 'All songs' listings.
16. Add 'mask-able' web-app icon.
17. Re-enable setting theme colour from cover on iOS.
18. Add support for window controls overlay.
19. Work-around 'glowing' progressbar with some zoom levels.
20. Check for updates each time 'Server settings' is closed.
21. Check for 'safe-area-inset-bottom' on iOS to determine if padding should
    be added.
22. Ignore some swipes when un-pinned queue is shown.
23. Fix retrieving biography for tracks with multiple artists.

4.1.0
-----
 1. Move track/album view selection into queue menu.
 2. Add left/right padding to lists if showing detailed sub-toolbar.
 3. Add left/right padding to MAI biography and review shown in browse view if
    also showing detailed sub-toolbar.
 4. Change to mobile-style cover/details/button layout for desktop now-playing
    bar based upon width.
 5. Reduce desktop now-playing bar height based upon width.
 6. Hide expand/collapse button from desktop toolbar if not wide enough, and