@@ -4,6 +4,8 @@
 2. Fix showing extra artists in album style queue.
 3. For LMS8.4+ no need to poll for updates, LMS now signals this in its status
    message.
+4. If screen height is 520px or less then un-pinned queue will be full height
+   over now-playing.
 
 4.1.1
 -----
